UPDATE se quitaron las carpetas
Borre algunas rutas para que funcionar ya todo el css y podder hacer el deploy.

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Iniciar sesión</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -23,6 +23,6 @@
     <p id="loginMsg"></p>
   </div>
 
-  <script src="js/login.js"></script>
+  <script src="login.js"></script>
 </body>
 </html>
