--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Panel principal</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -105,6 +105,6 @@
     <ul id="listaMovimientos"></ul>
   </div>
 
-  <script src="js/dashboard.js"></script>
+  <script src="dashboard.js"></script>
 </body>
 </html>
