--- a/registro.html
+++ b/registro.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Registro</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -30,6 +30,6 @@
     </p>
   </div>
 
-  <script src="js/registro.js"></script>
+  <script src="registro.js"></script>
 </body>
 </html>
